<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VideoUploadClient</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">vandy.mooc</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="title_upload_video">Upload Video by </string>
    
    
    <string name="pref_server_title">Server Address </string>
    <string name="pref_account_title">Account </string>
    
    <string name="pref_protocol_title">Protocol </string>
    <string name="pref_protocol_dialog_title">Select Protocol </string>
    <string name="pref_protocol_default">http </string>
    
    <string name="pref_ip_title">IP Address </string>
    <string name="pref_ip_dialog_title">IP Address </string>
    <string name="pref_ip_default">0.0.0.0</string>
    
    <string name="pref_username_default">admin</string>
    <string name="pref_password_default">pass</string>
    
    <string name="pref_port_title">Port </string>
     <string name="pref_port_dialog_title">Port </string>
    <string name="pref_port_default">8080</string>
    
    <string-array name="pref_protocolTypes">
        <item >http</item>
        <item >https</item>
    </string-array>
   
</resources>
